--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "pug-plain-loader": "^1.1.0",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
+    "vuelidate": "^0.7.6",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
