--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
+    "moment": "^2.29.1",
     "pug": "^3.0.0",
     "pug-plain-loader": "^1.1.0",
     "vue": "^2.6.11",
